// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bottom-toolbar/notification => дефолтное состояние (без привязки к ресурсу) 1`] = `
<div
  class="notification js-prevent-deselect"
>
  <div
    class="notification__body"
  >
    <span
      aria-live="assertive"
      role="alert"
    >
      default notification text
    </span>
  </div>
  <lego-components_button
    aria-label="Закрыть"
    classname="notification__button-close"
    size="m"
    view="clear-inverse"
  />
</div>
`;

exports[`bottom-toolbar/notification => нотифайка о недостатке места для сохранения (ресурс без превью) 1`] = `
<div
  class="notification js-prevent-deselect"
>
  <div
    class="notification__body"
  >
    <span
      class="notification__icon"
      role="none"
    >
      <ufo-rocks_resource-icon
        cls="notification__preview"
        size="m"
        type="dir"
      />
    </span>
    <span
      aria-live="assertive"
      role="alert"
    >
      <span
        class="notification__text"
      >
        <span>
          Не хватает места на Диске
        </span>
        <br />
        <lego-components_link
          classname="notification__link"
          href="undefined/tuning/100gb_1m_2018"
          target="_blank"
          theme="strong"
        >
          <span>
            Добавить 
            <span
              data-ref="tariff-size"
            >
              100 ГБ
            </span>
             за 
            <span
              data-ref="tariff-price"
            >
              80 ₽
            </span>
             в месяц
          </span>
        </lego-components_link>
      </span>
    </span>
  </div>
  <lego-components_button
    aria-label="Закрыть"
    classname="notification__button-close"
    size="m"
    view="clear-inverse"
  />
</div>
`;

exports[`bottom-toolbar/notification => нотифайка о недостатке места для сохранения (ресурс с превью) 1`] = `
<div
  class="notification js-prevent-deselect"
>
  <div
    class="notification__body"
  >
    <span
      class="notification__icon"
      role="none"
    >
      <img
        class="notification__preview"
        role="none"
        src="https://preview-base-url?param=value&size=80x80"
      />
    </span>
    <span
      aria-live="assertive"
      role="alert"
    >
      <span
        class="notification__text"
      >
        <span>
          Не хватает места на Диске
        </span>
        <br />
        <lego-components_link
          classname="notification__link"
          href="undefined/tuning/100gb_1m_2018"
          target="_blank"
          theme="strong"
        >
          <span>
            Добавить 
            <span
              data-ref="tariff-size"
            >
              100 ГБ
            </span>
             за 
            <span
              data-ref="tariff-price"
            >
              80 ₽
            </span>
             в месяц
          </span>
        </lego-components_link>
      </span>
    </span>
  </div>
  <lego-components_button
    aria-label="Закрыть"
    classname="notification__button-close"
    size="m"
    view="clear-inverse"
  />
</div>
`;

exports[`bottom-toolbar/notification => нотифайка об ошибке сохранения (ресурс без превью) 1`] = `
<div
  class="notification js-prevent-deselect"
>
  <div
    class="notification__body"
  >
    <span
      class="notification__icon"
      role="none"
    >
      <ufo-rocks_resource-icon
        cls="notification__preview"
        size="m"
        type="dir"
      />
    </span>
    <span
      aria-live="assertive"
      role="alert"
    >
      <span
        class="notification__text"
      >
        <span
          class="notification__resource-name"
          data-ref="resource-name"
        >
          <span
            class="notification__resource-name-main"
          >
            folder-name
          </span>
          <span
            class="notification__resource-name-ext"
          />
        </span>
        
не удалось сохранить на Яндекс.Диск
      </span>
    </span>
  </div>
  <lego-components_button
    aria-label="Закрыть"
    classname="notification__button-close"
    size="m"
    view="clear-inverse"
  />
</div>
`;

exports[`bottom-toolbar/notification => нотифайка об ошибке сохранения (ресурс с превью) 1`] = `
<div
  class="notification js-prevent-deselect"
>
  <div
    class="notification__body"
  >
    <span
      class="notification__icon"
      role="none"
    >
      <img
        class="notification__preview"
        role="none"
        src="https://preview-base-url?param=value&size=80x80"
      />
    </span>
    <span
      aria-live="assertive"
      role="alert"
    >
      <span
        class="notification__text"
      >
        <span
          class="notification__resource-name"
          data-ref="resource-name"
        >
          <span
            class="notification__resource-name-main"
          >
            resource-with-preview.
          </span>
          <span
            class="notification__resource-name-ext"
          >
            jpg
          </span>
        </span>
        
не удалось сохранить на Яндекс.Диск
      </span>
    </span>
  </div>
  <lego-components_button
    aria-label="Закрыть"
    classname="notification__button-close"
    size="m"
    view="clear-inverse"
  />
</div>
`;

exports[`bottom-toolbar/notification => нотифайка об успешном сохранении (ресурс без превью) 1`] = `
<div
  class="notification js-prevent-deselect"
>
  <div
    class="notification__body"
  >
    <span
      class="notification__icon"
      role="none"
    >
      <ufo-rocks_resource-icon
        cls="notification__preview"
        size="m"
        type="dir"
      />
    </span>
    <span
      aria-live="assertive"
      role="alert"
    >
      <span
        class="notification__text"
      >
        <span
          class="notification__resource-name"
          data-ref="resource-name"
        >
          <span
            class="notification__resource-name-main"
          >
            folder-name
          </span>
          <span
            class="notification__resource-name-ext"
          />
        </span>
        
сохранено в 
        <b
          data-ref="downloads"
        >
          Загрузки
        </b>
      </span>
    </span>
  </div>
  <lego-components_button
    aria-label="Закрыть"
    classname="notification__button-close"
    size="m"
    view="clear-inverse"
  />
</div>
`;

exports[`bottom-toolbar/notification => нотифайка об успешном сохранении (ресурс с превью) 1`] = `
<div
  class="notification js-prevent-deselect"
>
  <div
    class="notification__body"
  >
    <span
      class="notification__icon"
      role="none"
    >
      <img
        class="notification__preview"
        role="none"
        src="https://preview-base-url?param=value&size=80x80"
      />
    </span>
    <span
      aria-live="assertive"
      role="alert"
    >
      <span
        class="notification__text"
      >
        <span
          class="notification__resource-name"
          data-ref="resource-name"
        >
          <span
            class="notification__resource-name-main"
          >
            resource-with-preview.
          </span>
          <span
            class="notification__resource-name-ext"
          >
            jpg
          </span>
        </span>
        
сохранено в 
        <b
          data-ref="downloads"
        >
          Загрузки
        </b>
      </span>
    </span>
  </div>
  <lego-components_button
    aria-label="Закрыть"
    classname="notification__button-close"
    size="m"
    view="clear-inverse"
  />
</div>
`;

exports[`bottom-toolbar/notification => нотифайка с привязкой к ресурсу 1`] = `
<div
  class="notification js-prevent-deselect"
>
  <div
    class="notification__body"
  >
    <span
      aria-live="assertive"
      role="alert"
    >
      <span
        class="notification__text"
      >
        notification without resource text
      </span>
    </span>
  </div>
  <lego-components_button
    aria-label="Закрыть"
    classname="notification__button-close"
    size="m"
    view="clear-inverse"
  />
</div>
`;
